awesomniumc/include/awesomiumc.h

//#define HeaderDefinitionC void*

typedef struct {
	int x, y, width, height;
} RectC;


typedef struct {
	void (AWE_CALLBACK *onBeginNavigation) (WebViewC webView, const char* url, const wchar_t* frameName);	
	void (AWE_CALLBACK *onBeginLoading) (WebViewC webView, const char* url, const wchar_t* frameName, int statusCode, const wchar_t* mimeType);
	void (AWE_CALLBACK *onFinishLoading) (WebViewC webView);
	void (AWE_CALLBACK *onCallback) (WebViewC webView, const wchar_t* objectName, const wchar_t* callbackName, const JSArgumentsC args);
	void (AWE_CALLBACK *onReceiveTitle) (WebViewC webView, const wchar_t* title, const wchar_t* frameName);
	void (AWE_CALLBACK *onChangeTooltip) (WebViewC webView, const wchar_t* toolTip);
	void (AWE_CALLBACK *onChangeCursor) (WebViewC webView, int cursor);
	void (AWE_CALLBACK *onChangeKeyboardFocus) (WebViewC webView, int isFocused);
	void (AWE_CALLBACK *onChangeTargetURL) (WebViewC webView, const char* url);
	void (AWE_CALLBACK *onOpenExternalLink) (WebViewC webView, const char* url, const wchar_t* source);
	void (AWE_CALLBACK *onRequestDownload) (WebViewC webView, const char* url);
	void (AWE_CALLBACK *onWebViewCrashed) (WebViewC webView);
	void (AWE_CALLBACK *onPluginCrashed) (WebViewC webView, const wchar_t* pluginName);
	void (AWE_CALLBACK *onRequestMove) (WebViewC webView, int x, int y);
	void (AWE_CALLBACK *onGetPageContents) (WebViewC webView, const char* url, const wchar_t* contents);
	void (AWE_CALLBACK *onDOMReady) (WebViewC webView);
} WebViewListenerC;


typedef struct {
	int 		type;
	int 		modifiers;
	int 		virtualKeyCode;
	int 		nativeKeyCode;
	char 		keyIdentifier [20];
	wchar_t* 	text [4];
	wchar_t* 	unmodifiedText [4];
	int 		isSystemKey;
} WebKeyboardEventC;


	extern EXPORT void                  awe_WebView_destroy(WebViewC webView);

	extern EXPORT void                  awe_WebView_setListener(WebViewC webView, const WebViewListenerC* webViewListener);

	extern EXPORT WebViewListenerC*     awe_WebView_getListener(WebViewC webView);

	extern EXPORT ResourceInterceptorC* awe_WebView_getResourceInterceptor(WebViewC webView);

	extern EXPORT void                  awe_WebView_loadURL(WebViewC webView, const char* url, const wchar_t* frameName, const char* username, const char* password);

	extern EXPORT void                  awe_WebView_loadURLW(WebViewC webView, const wchar_t* url, const wchar_t* frameName, const char* username, const char* password);

	extern EXPORT void                  awe_WebView_loadHTML(WebViewC webView, const char* html, const wchar_t* frameName);

	extern EXPORT void                  awe_WebView_loadHTMLW(WebViewC webView, const wchar_t* html, const wchar_t* frameName);

	extern EXPORT void                  awe_WebView_loadFile(WebViewC webView, const char* file, const wchar_t* frameName);

	extern EXPORT void                  awe_WebView_goToHistoryOffset(WebViewC webView, int offset);

	extern EXPORT void                  awe_WebView_stop(WebViewC webView);

	extern EXPORT void                  awe_WebView_reload(WebViewC webView);

	extern EXPORT void                  awe_WebView_executeJavascript(WebViewC webView, const char* javascript, const wchar_t* frameName);

	extern EXPORT void                  awe_WebView_executeJavascriptW(WebViewC webView, const wchar_t* javascript, const wchar_t* frameName);

	extern EXPORT JSValueC              awe_WebView_executeJavascriptWithResult(WebViewC webView, const char* javascript, const wchar_t* frameName);

	extern EXPORT JSValueC              awe_WebView_executeJavascriptWithResultTimeout(WebViewC webView, const char* javascript, const wchar_t* frameName, int timeoutMS);

	extern EXPORT JSValueC              awe_WebView_executeJavascriptWithResultW(WebViewC webView, const wchar_t* javascript, const wchar_t* frameName);

	extern EXPORT JSValueC              awe_WebView_executeJavascriptWithResultTimeoutW(WebViewC webView, const wchar_t* javascript, const wchar_t* frameName, int timeoutMS);

	extern EXPORT void                  awe_WebView_callJavascriptFunction(WebViewC webView, const wchar_t* object, const wchar_t* function, JSArgumentsC args, const wchar_t* frameName);

	extern EXPORT void                  awe_WebView_createObject(WebViewC webView, const wchar_t* objectName);

	extern EXPORT void                  awe_WebView_destroyObject(WebViewC webView, const wchar_t* objectName);

	extern EXPORT void                  awe_WebView_setObjectProperty(WebViewC webView, const wchar_t* objectName, const wchar_t* propName, JSValueC value);

	extern EXPORT void                  awe_WebView_setObjectCallback(WebViewC webView, const wchar_t* objectName, const wchar_t* callbackName);

	extern EXPORT int                   awe_WebView_isLoadingPage(WebViewC webView);

	extern EXPORT int                   awe_WebView_isDirty(WebViewC webView);

	extern EXPORT void                  awe_WebView_getDirtyBounds(WebViewC webView, RectC* rect);

	extern EXPORT RenderBufferC         awe_WebView_render(WebViewC webView);

	extern EXPORT void                  awe_WebView_pauseRendering(WebViewC webView);

	extern EXPORT void                  awe_WebView_resumeRendering(WebViewC webView);

	extern EXPORT void                  awe_WebView_injectMouseMove(WebViewC webView, int x, int y);

	extern EXPORT void                  awe_WebView_injectMouseDown(WebViewC webView, int mouseButton);

	extern EXPORT void                  awe_WebView_injectMouseUp(WebViewC webView, int mouseButton);

	extern EXPORT void                  awe_WebView_injectMouseWheel(WebViewC webView, int scrollAmount);

	extern EXPORT void                  awe_WebView_injectKeyboardEvent(WebViewC webView, WebKeyboardEventC* keyboardEvent);

	extern EXPORT void                  awe_WebView_injectKeyboardEventArgs(WebViewC webView, int type, int modifiers, int virtualKeyCode, int nativeKeyCode, char* keyIdentifier, wchar_t* text, wchar_t* unmodifiedText, int isSystemKey);

	extern EXPORT void                  awe_WebView_injectKeyboardEventCharacter(WebViewC webView, unsigned int character);

	extern EXPORT void                  awe_WebView_injectKeyboardEventWindows(WebViewC webView, int msg, WPARAM wparam, LPARAM lparam);

	extern EXPORT void                  awe_WebView_cut(WebViewC webView);

	extern EXPORT void                  awe_WebView_copy(WebViewC webView);

	extern EXPORT void                  awe_WebView_paste(WebViewC webView);

	extern EXPORT void                  awe_WebView_selectAll(WebViewC webView);

	extern EXPORT void                  awe_WebView_setZoom(WebViewC webView, int zoomPercent);

	extern EXPORT void                  awe_WebView_resetZoom(WebViewC webView);

	extern EXPORT int                   awe_WebView_resize(WebViewC webView, int width, int height, int waitForRepaint, int repaintTimeoutMS);

	extern EXPORT int                   awe_WebView_isResizing(WebViewC webView);

	extern EXPORT void                  awe_WebView_unfocus(WebViewC webView);

	extern EXPORT void                  awe_WebView_focus(WebViewC webView);

	extern EXPORT void                  awe_WebView_setTransparent(WebViewC webView, int isTransparent);

	extern EXPORT void                  awe_WebView_setURLFilteringMode(WebViewC webView, int mode);

	extern EXPORT void                  awe_WebView_addURLFilter(WebViewC webView, const wchar_t* filter);

	extern EXPORT void                  awe_WebView_clearAllURLFilters(WebViewC webView);

//	extern EXPORT void                  awe_WebView_setHeaderDefinition(WebViewC webView, const char* name, HeaderDefinitionC definition);
//	extern EXPORT void                  awe_WebView_addHeaderRewriteRule(WebViewC webView, const wchar_t* rule, const char* name);
//	extern EXPORT void                  awe_WebView_removeHeaderRewriteRule(WebViewC webView, const wchar_t* rule);
//	extern EXPORT void                  awe_WebView_removeHeaderRewriteRulesByDefinitionName(WebViewC webView, const char* name); 	

	extern EXPORT void awe_getKeyIdentifierFromVirtualKeyCode(int keyCode, char** identifier);


	extern EXPORT RenderBufferC awe_RenderBuffer_new(int width, int height);

	extern EXPORT RenderBufferC awe_RenderBuffer_newFromBuffer(unsigned char* buffer, int width, int height, int rowSpan, int autoDeleteBuffer);

	extern EXPORT void          awe_RenderBuffer_delete(RenderBufferC renderBuffer);

	extern EXPORT void          awe_RenderBuffer_copyTo(RenderBufferC renderBuffer, unsigned char* destBuffer, int destRowSpan, int destDepth, int convertToRGBA);

	extern EXPORT void          awe_RenderBuffer_saveToPNG(RenderBufferC renderBuffer, const wchar_t* filePath, int preserveTransparency);

	extern EXPORT void          awe_RenderBuffer_saveToJPEG(RenderBufferC renderBuffer, const wchar_t* filePath, int quality);

	extern EXPORT void          awe_RenderBuffer_reserve(RenderBufferC renderBuffer, int width, int height);

	extern EXPORT void          awe_RenderBuffer_copyFrom(RenderBufferC renderBuffer, unsigned char* srcBuffer, int srcRowSpan);

	extern EXPORT void          awe_RenderBuffer_copyArea(RenderBufferC renderBuffer, unsigned char* srcBuffer, int srcRowSpan, int srcX, int srcY, int srcWidth, int srcHeight, int forceOpaque);

	extern EXPORT void          awe_RenderBuffer_copyArea2(RenderBufferC renderBuffer, RenderBufferC srcBuffer, int srcX, int srcY, int srcWidth, int srcHeight, int dstX, int dstY, int dstWidth, int dstHeight);

	extern EXPORT void          awe_RenderBuffer_scrollArea(RenderBufferC renderBuffer, int dx, int dy, int clipX, int clipY, int clipWidth, int clipHeight);

	extern EXPORT unsigned char* awe_RenderBuffer_buffer(RenderBufferC renderBuffer);

	extern EXPORT int           awe_RenderBuffer_width(RenderBufferC renderBuffer);

	extern EXPORT int           awe_RenderBuffer_height(RenderBufferC renderBuffer);

	extern EXPORT int           awe_RenderBuffer_rowSpan(RenderBufferC renderBuffer);

	extern EXPORT int           awe_RenderBuffer_ownsBuffer(RenderBufferC renderBuffer);