freebasic/awesomium.bi


declare sub awe_WebView_destroy cdecl alias "awe_WebView_destroy" (byval webView as any ptr)
declare sub awe_WebView_setListener cdecl alias "awe_WebView_setListener" (byval webView as any ptr, byval webViewListener as WebViewListenerC ptr)
declare function awe_WebView_getListener cdecl alias "awe_WebView_getListener" (byval webView as any ptr) as WebViewListenerC ptr
declare function awe_WebView_getResourceInterceptor cdecl alias "awe_WebView_getResourceInterceptor" (byval webView as any ptr) as any ptr ptr
declare sub awe_WebView_loadURL cdecl alias "awe_WebView_loadURL" (byval webView as any ptr, byval url as zstring ptr, byval frameName as wstring ptr, byval username as zstring ptr, byval password as zstring ptr)
declare sub awe_WebView_loadURLW cdecl alias "awe_WebView_loadURLW" (byval webView as any ptr, byval url as wstring ptr, byval frameName as wstring ptr, byval username as zstring ptr, byval password as zstring ptr)
declare sub awe_WebView_loadHTML cdecl alias "awe_WebView_loadHTML" (byval webView as any ptr, byval html as zstring ptr, byval frameName as wstring ptr)
declare sub awe_WebView_loadHTMLW cdecl alias "awe_WebView_loadHTMLW" (byval webView as any ptr, byval html as wstring ptr, byval frameName as wstring ptr)
declare sub awe_WebView_loadFile cdecl alias "awe_WebView_loadFile" (byval webView as any ptr, byval file as zstring ptr, byval frameName as wstring ptr)
declare sub awe_WebView_goToHistoryOffset cdecl alias "awe_WebView_goToHistoryOffset" (byval webView as any ptr, byval offset as integer)
declare sub awe_WebView_stop cdecl alias "awe_WebView_stop" (byval webView as any ptr)
declare sub awe_WebView_reload cdecl alias "awe_WebView_reload" (byval webView as any ptr)
declare sub awe_WebView_executeJavascript cdecl alias "awe_WebView_executeJavascript" (byval webView as any ptr, byval javascript as zstring ptr, byval frameName as wstring ptr)
declare sub awe_WebView_executeJavascriptW cdecl alias "awe_WebView_executeJavascriptW" (byval webView as any ptr, byval javascript as wstring ptr, byval frameName as wstring ptr)
declare function awe_WebView_executeJavascriptWithResult cdecl alias "awe_WebView_executeJavascriptWithResult" (byval webView as any ptr, byval javascript as zstring ptr, byval frameName as wstring ptr) as any ptr
declare function awe_WebView_executeJavascriptWithResultTimeout cdecl alias "awe_WebView_executeJavascriptWithResultTimeout" (byval webView as any ptr, byval javascript as zstring ptr, byval frameName as wstring ptr, byval timeoutMS as integer) as any ptr
declare function awe_WebView_executeJavascriptWithResultW cdecl alias "awe_WebView_executeJavascriptWithResultW" (byval webView as any ptr, byval javascript as wstring ptr, byval frameName as wstring ptr) as any ptr
declare function awe_WebView_executeJavascriptWithResultTimeoutW cdecl alias "awe_WebView_executeJavascriptWithResultTimeoutW" (byval webView as any ptr, byval javascript as wstring ptr, byval frameName as wstring ptr, byval timeoutMS as integer) as any ptr
declare sub awe_WebView_callJavascriptFunction cdecl alias "awe_WebView_callJavascriptFunction" (byval webView as any ptr, byval object as wstring ptr, byval function as wstring ptr, byval args as any ptr, byval frameName as wstring ptr)
declare sub awe_WebView_createObject cdecl alias "awe_WebView_createObject" (byval webView as any ptr, byval objectName as wstring ptr)
declare sub awe_WebView_destroyObject cdecl alias "awe_WebView_destroyObject" (byval webView as any ptr, byval objectName as wstring ptr)
declare sub awe_WebView_setObjectProperty cdecl alias "awe_WebView_setObjectProperty" (byval webView as any ptr, byval objectName as wstring ptr, byval propName as wstring ptr, byval value as any ptr)
declare sub awe_WebView_setObjectCallback cdecl alias "awe_WebView_setObjectCallback" (byval webView as any ptr, byval objectName as wstring ptr, byval callbackName as wstring ptr)
declare function awe_WebView_isLoadingPage cdecl alias "awe_WebView_isLoadingPage" (byval webView as any ptr) as integer
declare function awe_WebView_isDirty cdecl alias "awe_WebView_isDirty" (byval webView as any ptr) as integer
declare sub awe_WebView_getDirtyBounds cdecl alias "awe_WebView_getDirtyBounds" (byval webView as any ptr, byval rect as RectC ptr)
declare function awe_WebView_render cdecl alias "awe_WebView_render" (byval webView as any ptr) as any ptr
declare sub awe_WebView_pauseRendering cdecl alias "awe_WebView_pauseRendering" (byval webView as any ptr)
declare sub awe_WebView_resumeRendering cdecl alias "awe_WebView_resumeRendering" (byval webView as any ptr)
declare sub awe_WebView_injectMouseMove cdecl alias "awe_WebView_injectMouseMove" (byval webView as any ptr, byval x as integer, byval y as integer)
declare sub awe_WebView_injectMouseDown cdecl alias "awe_WebView_injectMouseDown" (byval webView as any ptr, byval mouseButton as integer)
declare sub awe_WebView_injectMouseUp cdecl alias "awe_WebView_injectMouseUp" (byval webView as any ptr, byval mouseButton as integer)
declare sub awe_WebView_injectMouseWheel cdecl alias "awe_WebView_injectMouseWheel" (byval webView as any ptr, byval scrollAmount as integer)
declare sub awe_WebView_injectKeyboardEvent cdecl alias "awe_WebView_injectKeyboardEvent" (byval webView as any ptr, byval keyboardEvent as WebKeyboardEventC ptr)
declare sub awe_WebView_injectKeyboardEventWindows cdecl alias "awe_WebView_injectKeyboardEventWindows" (byval webView as any ptr, byval msg as integer, byval w as WPARAM, byval l as LPARAM)
declare sub awe_WebView_injectKeyboardEventCharacter cdecl alias "awe_WebView_injectKeyboardEventCharacter" (byval webView as any ptr, byval character as integer)
declare sub awe_WebView_injectKeyboardEventArgs cdecl alias "awe_WebView_injectKeyboardEventArgs"(byval webView as any ptr, byval typ as integer, byval modifiers as integer, byval virtualKeyCode as integer, byval nativeKeyCode as integer, byval keyIdentifier as ubyte ptr, byval text as ushort ptr, byval unmodifiedText as any ptr, byval isSystemKey as integer)
declare sub awe_WebView_cut cdecl alias "awe_WebView_cut" (byval webView as any ptr)
declare sub awe_WebView_copy cdecl alias "awe_WebView_copy" (byval webView as any ptr)
declare sub awe_WebView_paste cdecl alias "awe_WebView_paste" (byval webView as any ptr)
declare sub awe_WebView_selectAll cdecl alias "awe_WebView_selectAll" (byval webView as any ptr)
declare sub awe_WebView_setZoom cdecl alias "awe_WebView_setZoom" (byval webView as any ptr, byval zoomPercent as integer)
declare sub awe_WebView_resetZoom cdecl alias "awe_WebView_resetZoom" (byval webView as any ptr)
declare function awe_WebView_resize cdecl alias "awe_WebView_resize" (byval webView as any ptr, byval width as integer, byval height as integer, byval waitForRepaint as integer, byval repaintTimeoutMS as integer) as integer
declare function awe_WebView_isResizing cdecl alias "awe_WebView_isResizing" (byval webView as any ptr) as integer
declare sub awe_WebView_unfocus cdecl alias "awe_WebView_unfocus" (byval webView as any ptr)
declare sub awe_WebView_focus cdecl alias "awe_WebView_focus" (byval webView as any ptr)
declare sub awe_WebView_setTransparent cdecl alias "awe_WebView_setTransparent" (byval webView as any ptr, byval isTransparent as integer)
declare sub awe_WebView_setURLFilteringMode cdecl alias "awe_WebView_setURLFilteringMode" (byval webView as any ptr, byval mode as integer)
declare sub awe_WebView_addURLFilter cdecl alias "awe_WebView_addURLFilter" (byval webView as any ptr, byval filter as wstring ptr)
declare sub awe_WebView_clearAllURLFilters cdecl alias "awe_WebView_clearAllURLFilters" (byval webView as any ptr)

declare sub awe_getKeyIdentifierFromVirtualKeyCode cdecl alias "awe_getKeyIdentifierFromVirtualKeyCode" (byval keyCode as integer, byval identifier as any ptr)

declare function awe_RenderBuffer_new cdecl alias "awe_RenderBuffer_new" (byval width as integer, byval height as integer) as any ptr
declare function awe_RenderBuffer_newFromBuffer cdecl alias "awe_RenderBuffer_newFromBuffer" (byval buffer as ubyte ptr, byval width as integer, byval height as integer, byval rowSpan as integer, byval autoDeleteBuffer as integer) as any ptr
declare sub awe_RenderBuffer_delete cdecl alias "awe_RenderBuffer_delete" (byval renderBuffer as any ptr)
declare sub awe_RenderBuffer_copyTo cdecl alias "awe_RenderBuffer_copyTo" (byval renderBuffer as any ptr, byval destBuffer as ubyte ptr, byval destRowSpan as integer, byval destDepth as integer, byval convertToRGBA as integer)
declare sub awe_RenderBuffer_saveToPNG cdecl alias "awe_RenderBuffer_saveToPNG" (byval renderBuffer as any ptr, byval filePath as wstring ptr, byval preserveTransparency as integer)
declare sub awe_RenderBuffer_saveToJPEG cdecl alias "awe_RenderBuffer_saveToJPEG" (byval renderBuffer as any ptr, byval filePath as wstring ptr, byval quality as integer)
declare sub awe_RenderBuffer_reserve cdecl alias "awe_RenderBuffer_reserve" (byval renderBuffer as any ptr, byval width as integer, byval height as integer)
declare sub awe_RenderBuffer_copyFrom cdecl alias "awe_RenderBuffer_copyFrom" (byval renderBuffer as any ptr, byval srcBuffer as ubyte ptr, byval srcRowSpan as integer)
declare sub awe_RenderBuffer_copyArea cdecl alias "awe_RenderBuffer_copyArea" (byval renderBuffer as any ptr, byval srcBuffer as ubyte ptr, byval srcRowSpan as integer, byval srcX as integer, byval srcY as integer, byval srcWidth as integer, byval srcHeight as integer, byval forceOpaque as integer)
declare sub awe_RenderBuffer_copyArea2 cdecl alias "awe_RenderBuffer_copyArea2" (byval renderBuffer as any ptr, byval srcBuffer as any ptr, byval srcX as integer, byval srcY as integer, byval srcWidth as integer, byval srcHeight as integer, byval dstX as integer, byval dstY as integer, byval dstWidth as integer, byval dstHeight as integer)
declare sub awe_RenderBuffer_scrollArea cdecl alias "awe_RenderBuffer_scrollArea" (byval renderBufferC as any ptr, byval dx as integer, byval dy as integer, byval clipX as integer, byval clipY as integer, byval clipWidth as integer, byval clipHeight as integer)
declare function awe_RenderBuffer_buffer cdecl alias "awe_RenderBuffer_buffer" (byval renderBuffer as any ptr) as ubyte ptr
declare function awe_RenderBuffer_width cdecl alias "awe_RenderBuffer_width" (byval renderBuffer as any ptr) as integer
declare function awe_RenderBuffer_height cdecl alias "awe_RenderBuffer_height" (byval renderBuffer as any ptr) as integer
declare function awe_RenderBuffer_rowSpan cdecl alias "awe_RenderBuffer_rowSpan" (byval renderBuffer as any ptr) as integer
declare function awe_RenderBuffer_ownsBuffer cdecl alias "awe_RenderBuffer_ownsBuffer" (byval renderBuffer as any ptr) as integer
